--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.3",
     "vue": "^3.2.33",
     "vue-cookies": "^1.8.1",
     "vue-resource": "^1.5.3",
